# ayatana-ido

./: .build.yml  .bzrignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL.md  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  libayatana-ido.pc.in  libayatana-ido3.pc.in
data/: CMakeLists.txt  libayatana-ido3-0.4.pc.in  libayatana-ido4-0.4.pc.in
debian/: changelog  control  copyright  gir1.2-ayatanaido3-0.4.install  gir1.2-ayatanaido4-0.4.install  libayatana-ido3-0.4-0.install  libayatana-ido3-0.4-0.symbols  libayatana-ido3-0.4-dev.install  libayatana-ido3-dev.install  libayatana-ido4-0.4-0.install  libayatana-ido4-0.4-0.symbols  libayatana-ido4-dev.install  libido3-0.1-0.symbols  libido3-0.1-dev.install  rules  watch
example/: CMakeLists.txt  Makefile.am  gesture.c  menus.c  messagedialog.c
src/: CMakeLists.txt  Makefile.am  ayatana-private.h  ayatanamenuitemfactory.h  idoactionhelper.c  idoactionhelper.h  idoalarmmenuitem.c  idoapplicationmenuitem.c  idoappointmentmenuitem.c  idoappointmentmenuitem.h  idobasicmenuitem.c  idobasicmenuitem.h  idocalendarmenuitem.c  idocalendarmenuitem.h  idodetaillabel.c  idodetaillabel.h  idoentrymenuitem.c  idoentrymenuitem.h  idogesturemanager.c  idogesturemanager.h  idolevelmenuitem.c  idolevelmenuitem.h  idolocationmenuitem.c  idolocationmenuitem.h  idomediaplayermenuitem.c  idomenuitemfactory.c  idomessagedialog.c  idomessagedialog.h  idooffscreenproxy.c  idooffscreenproxy.h  idoplaybackmenuitem.c  idoprogressmenuitem.c  idorange.c  idorange.h  idoremovablemenuitem.c  idoremovablemenuitem.h  idoscalemenuitem.c  idoscalemenuitem.h  idosourcemenuitem.c  idoswitchmenuitem.c  (+12 more)
tests/: CMakeLists.txt  Makefile.am  gtest-dialog.cpp  gtest-menuitems.cpp
